# rag

./: .gitignore  Makefile  README.md  pyproject.toml
src/: ast_cleaninig.py  ast_proto.py  cli.py  generation.py  indexing.py  main.py  models.py  pipeline.py  retrieval.py  student.py  test_file.py  validation.py
test/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  metadata.json  params.index.json  vocab.index.json
