[project]
name = "rag"
version = "1.0.0"
authors = [
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]

description = "Retrieval Augmented Generation, that’s it. That’s the goal of this project."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/rag-against-the-machine/mboutte"
