[project]
name = "rag"
version = "1.0.0"
authors = [
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]

description = "Retrieval Augmented Generation, that’s it. That’s the goal of this project."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.3",
    "stubs>=1.0.0",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
    "types-tqdm>=4.67.3.20260518",
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/rag-against-the-machine/mboutte"

[tool.mypy]
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["bm25s_test"]
disable_error_code = ["import-untyped"]
